[package]
name = "bevy_scene_test"
version = "0.1.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["jpeg"] }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = ["jpeg"] }
bevy_fly_camera = { git = "https://github.com/mcpar-land/bevy_fly_camera", branch = "master" }

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = ["jpeg"] }
